bloodc/src/parser/snapshots/bloodc__parser__tests__pure_function.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 11,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 12,
                                        end: 13,
                                        start_line: 1,
                                        start_col: 13,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 12,
                                end: 13,
                                start_line: 1,
                                start_col: 13,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 15,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 15,
                                        end: 18,
                                        start_line: 1,
                                        start_col: 16,
                                    },
                                },
                            ),
                            span: Span {
                                start: 15,
                                end: 18,
                                start_line: 1,
                                start_col: 16,
                            },
                        },
                        span: Span {
                            start: 12,
                            end: 18,
                            start_line: 1,
                            start_col: 13,
                        },
                    },
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 4,
                                    },
                                    span: Span {
                                        start: 20,
                                        end: 21,
                                        start_line: 1,
                                        start_col: 21,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 20,
                                end: 21,
                                start_line: 1,
                                start_col: 21,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 23,
                                                    end: 26,
                                                    start_line: 1,
                                                    start_col: 24,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 23,
                                        end: 26,
                                        start_line: 1,
                                        start_col: 24,
                                    },
                                },
                            ),
                            span: Span {
                                start: 23,
                                end: 26,
                                start_line: 1,
                                start_col: 24,
                            },
                        },
                        span: Span {
                            start: 20,
                            end: 26,
                            start_line: 1,
                            start_col: 21,
                        },
                    },
                ],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 31,
                                                end: 34,
                                                start_line: 1,
                                                start_col: 32,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 31,
                                    end: 34,
                                    start_line: 1,
                                    start_col: 32,
                                },
                            },
                        ),
                        span: Span {
                            start: 31,
                            end: 34,
                            start_line: 1,
                            start_col: 32,
                        },
                    },
                ),
                effects: Some(
                    EffectRow {
                        kind: Pure,
                        span: Span {
                            start: 37,
                            end: 41,
                            start_line: 1,
                            start_col: 38,
                        },
                    },
                ),
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Binary {
                                    op: Add,
                                    left: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 44,
                                                                end: 45,
                                                                start_line: 1,
                                                                start_col: 45,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 44,
                                                    end: 45,
                                                    start_line: 1,
                                                    start_col: 45,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 44,
                                            end: 45,
                                            start_line: 1,
                                            start_col: 45,
                                        },
                                    },
                                    right: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 48,
                                                                end: 49,
                                                                start_line: 1,
                                                                start_col: 49,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 48,
                                                    end: 49,
                                                    start_line: 1,
                                                    start_col: 49,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 48,
                                            end: 49,
                                            start_line: 1,
                                            start_col: 49,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 44,
                                    end: 49,
                                    start_line: 1,
                                    start_col: 45,
                                },
                            },
                        ),
                        span: Span {
                            start: 42,
                            end: 51,
                            start_line: 1,
                            start_col: 43,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 51,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 51,
        start_line: 1,
        start_col: 1,
    },
}
